update faster scoring

--- a/notebooks/GNNEvaluation.ipynb
+++ b/notebooks/GNNEvaluation.ipynb
@@ -853,6 +853,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "362\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(all_tracks))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 192,
    "metadata": {},
    "outputs": [],
@@ -1208,12 +1225,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = [1, 2, 3, 4]\n",
-    "b = [3, 4, 5, 6]"
+    "df_sub2 = hits[['hit_id']]\n",
+    "df_sub2 = df_sub.assign(track_id=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "for itrk, track in enumerate(all_tracks):\n",
+    "    results += [(x, itrk) for x in track]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hit_id</th>\n",
+       "      <th>track_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>19235</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>28511</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>35815</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>42405</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>74484</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>81487</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>88145</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>93834</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>109844</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>115037</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    hit_id  track_id\n",
+       "10   19235         1\n",
+       "11   28511         1\n",
+       "12   35815         1\n",
+       "13   42405         1\n",
+       "14   74484         1\n",
+       "15   81487         1\n",
+       "16   88145         1\n",
+       "17   93834         1\n",
+       "18  109844         1\n",
+       "19  115037         1"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = pd.DataFrame(results, columns=['hit_id', 'track_id'])\n",
+    "new_df[10:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   hit_id  track_id_x  track_id_y\n",
+      "0       1           0     99999.0\n",
+      "1       2           0     99999.0\n",
+      "2       3           0     99999.0\n",
+      "3       4           0     99999.0\n",
+      "4       5           0     99999.0\n",
+      "        hit_id  track_id_x  track_id_y\n",
+      "109843  109844           0         1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sub3 = df_sub2.copy()\n",
+    "dff = df_sub3.merge(new_df, on='hit_id', how='outer')\n",
+    "dff = dff.fillna(99999)\n",
+    "print(dff.head())\n",
+    "print(dff[dff['hit_id'] == 109844])"
    ]
   },
   {
@@ -1230,8 +1395,11 @@
     }
    ],
    "source": [
-    "c = a + b\n",
-    "print(c)"
+    "for itrk, track in enumerate(all_tracks):\n",
+    "    cuts = df_sub['hit_id'].map(lambda x: x in track)\n",
+    "    df_sub.loc[cuts, 'track_id'] = itrk\n",
+    "\n",
+    "df_sub.head()"
    ]
   },
   {
@@ -1250,6 +1418,15 @@
    "source": [
     "c += a\n",
     "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evalation of first event results\n",
+    "  * total tracks:  1374\n",
+    "  * mean score: 0.06420239314690485"
    ]
   },
   {
