--- a/notebooks/HitGraphAnalysis.ipynb
+++ b/notebooks/HitGraphAnalysis.ipynb
@@ -299,9 +299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-v0.4.1",
+   "display_name": "TrackPy3.6",
    "language": "python",
-   "name": "pytorch-v0.4.1"
+   "name": "trackkernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
