--- a/notebooks/HitGraphConstruction.ipynb
+++ b/notebooks/HitGraphConstruction.ipynb
@@ -647,9 +647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-v0.4.1",
+   "display_name": "TrackPy3.6",
    "language": "python",
-   "name": "pytorch-v0.4.1"
+   "name": "trackkernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -661,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
