--- a/notebooks/DataAnalysis.ipynb
+++ b/notebooks/DataAnalysis.ipynb
@@ -8175,9 +8175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TrackPy3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "trackkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
