add comments and move double config to a folder

--- a/notebooks/GNN_Evaluation/PP-TF-HD-weightedLoss.ipynb
+++ b/notebooks/GNN_Evaluation/PP-TF-HD-weightedLoss.ipynb
@@ -41,9 +41,9 @@
       "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1030 21:12:20.659399 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/util.py:63: The name tf.GraphKeys is deprecated. Please use tf.compat.v1.GraphKeys instead.\n",
+      "W1030 22:16:56.088809 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/util.py:63: The name tf.GraphKeys is deprecated. Please use tf.compat.v1.GraphKeys instead.\n",
       "\n",
-      "W1030 21:12:21.572365 46912496622976 lazy_loader.py:50] \n",
+      "W1030 22:16:57.754904 46912496622976 lazy_loader.py:50] \n",
       "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
       "For more information, please see:\n",
       "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
@@ -51,7 +51,7 @@
       "  * https://github.com/tensorflow/io (for I/O related ops)\n",
       "If you depend on functionality not listed there, please file an issue.\n",
       "\n",
-      "W1030 21:12:21.588499 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/graph_nets/blocks.py:474: The name tf.unsorted_segment_sum is deprecated. Please use tf.math.unsorted_segment_sum instead.\n",
+      "W1030 22:16:57.786867 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/graph_nets/blocks.py:474: The name tf.unsorted_segment_sum is deprecated. Please use tf.math.unsorted_segment_sum instead.\n",
       "\n"
      ]
     }
@@ -84,27 +84,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W1030 21:12:30.386514 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:177: The name tf.make_template is deprecated. Please use tf.compat.v1.make_template instead.\n",
+      "W1030 22:17:02.896790 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:177: The name tf.make_template is deprecated. Please use tf.compat.v1.make_template instead.\n",
       "\n",
-      "W1030 21:12:30.391180 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:278: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "W1030 22:17:02.900521 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:278: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W1030 21:12:30.391891 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:579: The name tf.variable_scope is deprecated. Please use tf.compat.v1.variable_scope instead.\n",
-      "\n",
-      "W1030 21:12:30.577174 46912496622976 deprecation.py:506] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/basic.py:126: calling TruncatedNormal.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "W1030 21:12:30.578030 46912496622976 deprecation.py:506] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/basic.py:131: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+      "W1030 22:17:02.901153 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:579: The name tf.variable_scope is deprecated. Please use tf.compat.v1.variable_scope instead.\n",
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Events: 4658 with 16 sections, total 74528 files \n",
-      "Training data: [0, 3725] events, total 59616 files\n",
-      "Testing data:  [3726, 4658] events, total 14912 files\n",
+      "Total Events: 4682 with 16 sections, total 74912 files \n",
+      "Training data: [0, 3744] events, total 59920 files\n",
+      "Testing data:  [3745, 4682] events, total 14992 files\n",
       "Training and testing graphs are selected randomly from their corresponding pools\n"
      ]
     },
@@ -112,9 +106,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W1030 21:12:31.256509 46912496622976 deprecation_wrapper.py:119] From /global/project/projectdirs/atlas/xju/heptrack/gnn/code/heptrkx/heptrkx/postprocess/evaluate_tf.py:51: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
+      "W1030 22:17:03.228381 46912496622976 deprecation.py:506] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/basic.py:126: calling TruncatedNormal.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "W1030 22:17:03.229171 46912496622976 deprecation.py:506] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/basic.py:131: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "W1030 22:17:03.874882 46912496622976 deprecation_wrapper.py:119] From /global/project/projectdirs/atlas/xju/heptrack/gnn/code/heptrkx/heptrkx/postprocess/evaluate_tf.py:51: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
       "\n",
-      "W1030 21:12:31.287199 46912496622976 deprecation.py:323] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "W1030 22:17:03.902785 46912496622976 deprecation.py:323] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use standard file APIs to check for files with this prefix.\n"
      ]
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "16\n"
      ]
     }
    ],
@@ -203,17 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total_graphs 2\n",
-      "total_graphs 2\n",
-      "total_graphs 2\n",
-      "total_graphs 2\n"
+      "total_graphs 4\n",
+      "total_graphs 4\n",
+      "total_graphs 4\n",
+      "total_graphs 4\n",
+      "CPU times: user 3min 2s, sys: 1min 11s, total: 4min 14s\n",
+      "Wall time: 1min 17s\n"
      ]
     }
    ],
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,7 @@
        "[0.008247567976491364, 0.029359376, 0.016454647591672256, 0.028397913707522093]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +472,7 @@
        "[0.00771219990461165, 0.029359376, 0.016454647591672256, 0.028397913707522093]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,17 +483,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "efficiency: 0.7854741089441829\n",
-      "purity: 0.8808446455505279\n",
-      "CPU times: user 1min 42s, sys: 134 ms, total: 1min 42s\n",
-      "Wall time: 1min 42s\n"
+      "CPU times: user 1min 36s, sys: 242 ms, total: 1min 36s\n",
+      "Wall time: 1min 36s\n"
      ]
     }
    ],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
