--- a/notebooks/GNN_Evaluation/PP-TF-HD-weightedLoss.ipynb
+++ b/notebooks/GNN_Evaluation/PP-TF-HD-weightedLoss.ipynb
@@ -9,53 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1030 22:16:56.088809 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/util.py:63: The name tf.GraphKeys is deprecated. Please use tf.compat.v1.GraphKeys instead.\n",
-      "\n",
-      "W1030 22:16:57.754904 46912496622976 lazy_loader.py:50] \n",
-      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
-      "For more information, please see:\n",
-      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
-      "  * https://github.com/tensorflow/addons\n",
-      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
-      "If you depend on functionality not listed there, please file an issue.\n",
-      "\n",
-      "W1030 22:16:57.786867 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/graph_nets/blocks.py:474: The name tf.unsorted_segment_sum is deprecated. Please use tf.math.unsorted_segment_sum instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from heptrkx.postprocess.evaluate_tf import create_evaluator\n",
     "\n",
@@ -77,21 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W1030 22:17:02.896790 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:177: The name tf.make_template is deprecated. Please use tf.compat.v1.make_template instead.\n",
-      "\n",
-      "W1030 22:17:02.900521 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:278: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n",
-      "W1030 22:17:02.901153 46912496622976 deprecation_wrapper.py:119] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/base.py:579: The name tf.variable_scope is deprecated. Please use tf.compat.v1.variable_scope instead.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -100,23 +44,6 @@
       "Training data: [0, 3744] events, total 59920 files\n",
       "Testing data:  [3745, 4682] events, total 14992 files\n",
       "Training and testing graphs are selected randomly from their corresponding pools\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W1030 22:17:03.228381 46912496622976 deprecation.py:506] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/basic.py:126: calling TruncatedNormal.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "W1030 22:17:03.229171 46912496622976 deprecation.py:506] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/sonnet/python/modules/basic.py:131: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "W1030 22:17:03.874882 46912496622976 deprecation_wrapper.py:119] From /global/project/projectdirs/atlas/xju/heptrack/gnn/code/heptrkx/heptrkx/postprocess/evaluate_tf.py:51: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
-      "\n",
-      "W1030 22:17:03.902785 46912496622976 deprecation.py:323] From /global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use standard file APIs to check for files with this prefix.\n"
      ]
     }
    ],
@@ -133,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +141,8 @@
       "total_graphs 4\n",
       "total_graphs 4\n",
       "total_graphs 4\n",
-      "CPU times: user 3min 2s, sys: 1min 11s, total: 4min 14s\n",
-      "Wall time: 1min 17s\n"
+      "CPU times: user 3min 9s, sys: 1min 5s, total: 4min 15s\n",
+      "Wall time: 1min 22s\n"
      ]
     }
    ],
@@ -223,7 +150,7 @@
     "%%time\n",
     "all_graphs = []\n",
     "is_digraph = True\n",
-    "is_bidirection = False\n",
+    "is_bidirection = True\n",
     "# evaluate each graph\n",
     "for ibatch in range(n_batches):\n",
     "    ## pad batch_size\n",
@@ -276,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -295,16 +222,6 @@
       "Accuracy:            0.986860\n",
       "Precision (purity):  0.954197\n",
       "Recall (efficiency): 0.884761\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/project/projectdirs/atlas/xju/heptrack/gnn/code/heptrkx/heptrkx/nx_graph/utils_plot.py:170: UserWarning: Creating legend with loc=\"best\" can be slow with large amounts of data.\n",
-      "  plt.savefig(outname)\n",
-      "/global/homes/x/xju/.conda/envs/heptrk/lib/python3.6/site-packages/IPython/core/pylabtools.py:128: UserWarning: Creating legend with loc=\"best\" can be slow with large amounts of data.\n",
-      "  fig.canvas.print_figure(bytes_io, **kw)\n"
      ]
     },
     {
@@ -337,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +369,7 @@
        "[0.008247567976491364, 0.029359376, 0.016454647591672256, 0.028397913707522093]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +389,7 @@
        "[0.00771219990461165, 0.029359376, 0.016454647591672256, 0.028397913707522093]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,15 +400,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 36s, sys: 242 ms, total: 1min 36s\n",
-      "Wall time: 1min 36s\n"
+      "CPU times: user 1min 37s, sys: 83 ms, total: 1min 37s\n",
+      "Wall time: 1min 37s\n"
      ]
     }
    ],
@@ -502,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
