organize scripts in setup in alphabetic

--- a/notebooks/DataAnalysis.ipynb
+++ b/notebooks/DataAnalysis.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Understand the data and efficiencies of graph formation selections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "# and for local code\n",
-    "sys.path.append('..')"
+    "Use k-component method to perform the post-processing"
    ]
   },
   {
