evaluate the events

--- a/notebooks/GNN_Evaluation/CTD2019_KaggleData.ipynb
+++ b/notebooks/GNN_Evaluation/CTD2019_KaggleData.ipynb
@@ -329,7 +329,7 @@
     "    \n",
     "weights = np.array(weights)\n",
     "truths = np.array(truths)\n",
-    "utils_plot.plot_metrics(weights, truths, odd_th=0.5)\n",
+    "utils_plot.plot_metrics(weisegmenthts, truths, odd_th=0.5)\n",
     "# plot_metrics2(weights, truths, odd_th=0.5)"
    ]
   },
